<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="tab_movies">Movies</string>
    <string name="tab_tv_show">Tv Show</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="date">Date</string>

    <string name="set">----------</string>
    <string name="movie_info">MOVIE INFO</string>
    <string name="rating">Rating :</string>
    <string name="country">Language :</string>
    <string name="overview">OVERVIEW</string>
    <string name="setting">setting</string>
    <string name="now_showing">NOW SHOWING</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_favorite">Added to favorite</string>
    <string name="fail_favorite">Failed to add to favorite</string>
    <string name="remove_favorite">Removed from favorite</string>
    <string name="fail_remove">Failed to remove from favorite</string>
</resources>
