<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.mifta.project.id.dicodingsubmission4.fragment.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.mifta.project.id.dicodingsubmission4.fragment.TvShowFragment"
        android:label="@string/title_tv_show"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.mifta.project.id.dicodingsubmission4.fragment.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>