<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="150dp"
            android:layout_height="210dp"
            android:layout_margin="1dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_detail"
            android:layout_toRightOf="@id/img_detail"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/title"
            app:layout_constraintStart_toEndOf="@+id/img_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/img_detail"
            android:layout_toRightOf="@id/img_detail"
            android:fontFamily="serif-monospace"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/date"
            app:layout_constraintStart_toEndOf="@+id/img_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <View
            android:id="@+id/viewone"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/img_detail"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/img_detail"/>

        <TextView
            android:id="@+id/tvx_movieinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="serif-monospace"
            android:gravity="center_horizontal"
            android:text="@string/movie_info"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/viewone"/>


        <TextView
            android:id="@+id/tvx_rating"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="@string/rating"
            android:textColor="#000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvx_movieinfo" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textSize="14sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvx_rating"
            app:layout_constraintTop_toBottomOf="@+id/tvx_movieinfo" />

        <TextView
            android:id="@+id/tvx_country"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:text="@string/country"
            android:textColor="#000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvx_rating" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textSize="14sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvx_country"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

        <View
            android:id="@+id/viewtwo"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/tvx_country"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/tvx_country"/>


        <TextView
            android:id="@+id/tvx_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="15dp"
            android:fontFamily="serif-monospace"
            android:gravity="center_horizontal"
            android:text="@string/overview"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewtwo"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:text="@string/set"
            android:textColor="#000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvx_overview"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>